--- a/index.html
+++ b/index.html
@@ -998,44 +998,42 @@
 
 
 
-	<section id=" biz-haqimizda" class="py-20 relative overflow-hidden">
+	<section id="biz-haqimizda" class="py-12 sm:py-20 relative overflow-hidden">
 		<!-- Background Elements -->
-		<div class="absolute top-0 left-0 w-96 h-96  rounded-full blur-3xl -translate-x-1/2 -translate-y-1/2">
+		<div class="absolute top-0 left-0 w-96 h-96 rounded-full blur-3xl -translate-x-1/2 -translate-y-1/2">
 		</div>
-		<div class="absolute bottom-0 right-0 w-96 h-96  rounded-full blur-3xl translate-x-1/2 translate-y-1/2">
+		<div class="absolute bottom-0 right-0 w-96 h-96 rounded-full blur-3xl translate-x-1/2 translate-y-1/2">
 		</div>
 
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
 			<!-- Header -->
-			<div class="text-center mb-16">
+			<div class="text-center mb-8 sm:mb-16">
 				<div class="relative inline-block">
-					<h2 class="text-5xl lg:text-6xl font-bold text-[#00D084] mb-6">
+					<h2 class="text-3xl sm:text-5xl lg:text-6xl font-bold text-[#00D084] mb-4 sm:mb-6">
 						Biz haqimizda
 					</h2>
-
 				</div>
-				<p class="text-xl text-gray-600 max-w-3xl mx-auto mt-6">
+				<p class="text-base sm:text-xl text-gray-600 max-w-3xl mx-auto mt-4 sm:mt-6">
 					Muhib Academy — ilm, hunar va axloq mujassamlashgan maskan
 				</p>
 			</div>
 
 			<!-- Main Content Grid -->
-			<div class="grid grid-cols-1 lg:grid-cols-2 gap-12 mb-16">
+			<div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-12 mb-8 sm:mb-16">
 				<!-- Academy Description -->
-				<div class="space-y-8">
-					<div class="bg-white rounded-3xl p-8 shadow-xl card-hover feature-card">
-						<div class="flex items-center mb-6">
+				<div class="space-y-6 sm:space-y-8">
+					<div class="bg-white rounded-2xl sm:rounded-3xl p-6 sm:p-8 card-hover feature-card">
+						<div class="flex items-center mb-4 sm:mb-6">
 							<div
-								class="bg-gradient-to-br from-primary to-secondary w-12 h-12 rounded-2xl flex items-center justify-center mr-4">
-								<svg class="w-6 h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
+								class="bg-gradient-to-br from-primary to-secondary w-10 sm:w-12 h-10 sm:h-12 rounded-xl sm:rounded-2xl flex items-center justify-center mr-3 sm:mr-4">
+								<svg class="w-5 sm:w-6 h-5 sm:h-6 text-white" fill="currentColor" viewBox="0 0 24 24">
 									<path
 										d="M12 3L1 9l4 2.18v6L12 21l7-3.82v-6l2-1.09V17h2V9L12 3zm6.82 6L12 12.72 5.18 9 12 5.28 18.82 9zM17 15.99l-5 2.73-5-2.73v-3.72L12 15l5-2.73v3.72z" />
 								</svg>
 							</div>
-							<h3 class="text-2xl font-bold text-gray-800">Ta'lim Uslubimiz
-							</h3>
+							<h3 class="text-xl sm:text-2xl font-bold text-gray-800">Ta'lim Uslubimiz</h3>
 						</div>
-						<p class="text-gray-600 leading-relaxed text-lg">
+						<p class="text-gray-600 leading-relaxed text-sm sm:text-lg">
 							Akademiyamizda diniy va dunyoviy bilimlar uyg'un holda
 							o'qitiladi. Har bir fan — Qur'on va
 							hadis asoslariga tayanadi, shu bilan birga zamonaviy o'qitish
@@ -1043,15 +1041,16 @@
 						</p>
 					</div>
 
-					<div class="bg-white rounded-3xl p-8  card-hover feature-card">
-						<div class="flex items-center mb-6">
+					<div class="bg-white rounded-2xl sm:rounded-3xl p-6 sm:p-8 card-hover feature-card">
+						<div class="flex items-center mb-4 sm:mb-6">
 							<div
-								class="bg-gradient-to-br from-primary to-secondary w-12 h-12 rounded-2xl flex items-center justify-center mr-4">
-								<i style="color: white; font-size: 20px;" class="fa-solid fa-person-chalkboard"></i>
+								class="bg-gradient-to-br from-primary to-secondary w-10 sm:w-12 h-10 sm:h-12 rounded-xl sm:rounded-2xl flex items-center justify-center mr-3 sm:mr-4">
+								<i style="color: white; font-size: 16px;"
+									class="fa-solid fa-person-chalkboard sm:text-xl"></i>
 							</div>
-							<h3 class="text-2xl font-bold text-gray-800">Ustozlarimiz</h3>
+							<h3 class="text-xl sm:text-2xl font-bold text-gray-800">Ustozlarimiz</h3>
 						</div>
-						<p class="text-gray-600 leading-relaxed text-lg">
+						<p class="text-gray-600 leading-relaxed text-sm sm:text-lg">
 							Ustozlarimiz — 6 yillik tajribaga ega, tajvid, aqida, fiqh, arab
 							tili va dunyoviy fanlarda
 							chuqur bilimga ega mutaxassislar.
@@ -1063,21 +1062,20 @@
 				<div class="flex items-center justify-center">
 					<div class="relative">
 						<div
-							class="w-80 h-80 bg-gradient-to-br from-primary/20 to-secondary/20 rounded-full animate-float">
+							class="w-64 sm:w-80 h-64 sm:h-80 bg-gradient-to-br from-primary/20 to-secondary/20 rounded-full animate-float">
 						</div>
 						<div class="absolute inset-0 flex items-center justify-center">
-							<div class="bg-white rounded-3xl p-8 shadow-2xl text-center max-w-xs">
+							<div class="bg-white rounded-2xl sm:rounded-3xl p-6 sm:p-8 text-center max-w-xs">
 								<div
-									class="bg-gradient-to-br from-primary to-secondary w-16 h-16 rounded-2xl flex items-center justify-center mx-auto mb-4">
-									<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+									class="bg-gradient-to-br from-primary to-secondary w-12 sm:w-16 h-12 sm:h-16 rounded-xl sm:rounded-2xl flex items-center justify-center mx-auto mb-3 sm:mb-4">
+									<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor"
+										viewBox="0 0 24 24">
 										<path
 											d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
 									</svg>
 								</div>
-								<h4 class="text-lg font-bold text-gray-800 mb-2">6+ Yillik
-									Tajriba</h4>
-								<p class="text-sm text-gray-600">Professional ustozlar
-									jamoasi</p>
+								<h4 class="text-base sm:text-lg font-bold text-gray-800 mb-2">6+ Yillik Tajriba</h4>
+								<p class="text-xs sm:text-sm text-gray-600">Professional ustozlar jamoasi</p>
 							</div>
 						</div>
 					</div>
@@ -1085,15 +1083,15 @@
 			</div>
 
 			<!-- Mission Section -->
-			<div class=" rounded-3xl p-12  feature-card">
-				<div class="text-center mb-12">
+			<div class="rounded-2xl sm:rounded-3xl p-6 sm:p-12 feature-card bg-white">
+				<div class="text-center mb-8 sm:mb-12">
 					<div class="relative inline-block">
-						<h2 class="text-5xl lg:text-6xl font-bold text-[#00D084] mb-6">
+						<h2 class="text-3xl sm:text-5xl lg:text-6xl font-bold text-[#00D084] mb-4 sm:mb-6">
 							Maqsadimiz
 						</h2>
 						<div class="section-divider"></div>
 					</div>
-					<p class="text-xl text-gray-600 max-w-4xl mx-auto mt-6 leading-relaxed">
+					<p class="text-sm sm:text-xl text-gray-600 max-w-4xl mx-auto mt-4 sm:mt-6 leading-relaxed">
 						Bizning maqsadimiz — har bir qalbga Qur'on nuri tushishini
 						ta'minlash. Siz dunyoning qaysi bir
 						manzilida boʻlmang, yoshingiz va ijtimoiy holatingiz qanday
@@ -1102,65 +1100,66 @@
 					</p>
 				</div>
 
-				<div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-12">
-					<div class="text-center p-6 rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
+				<div class="grid grid-cols-1 md:grid-cols-3 gap-4 sm:gap-8 mb-8 sm:mb-12">
+					<div
+						class="text-center p-4 sm:p-6 rounded-xl sm:rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
 						<div
-							class="bg-gradient-to-br from-primary to-secondary w-16 h-16 rounded-2xl flex items-center justify-center mx-auto mb-4">
-							<svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+							class="bg-gradient-to-br from-primary to-secondary w-12 sm:w-16 h-12 sm:h-16 rounded-xl sm:rounded-2xl flex items-center justify-center mx-auto mb-3 sm:mb-4">
+							<svg class="w-6 sm:w-8 h-6 sm:h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
 								<path
 									d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" />
 							</svg>
 						</div>
-						<h4 class="text-lg font-bold text-gray-800 mb-2">Qur'onga Muhabbat
-						</h4>
-						<p class="text-gray-600 text-sm">O'quvchilar qalbida Qur'onga
+						<h4 class="text-base sm:text-lg font-bold text-gray-800 mb-2">Qur'onga Muhabbat</h4>
+						<p class="text-gray-600 text-xs sm:text-sm">O'quvchilar qalbida Qur'onga
 							boʻlgan muhabbatni paydo qilish
 						</p>
 					</div>
 
-					<div class="text-center p-6 rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
+					<div
+						class="text-center p-4 sm:p-6 rounded-xl sm:rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
 						<div
-							class="bg-gradient-to-br from-primary to-secondary w-16 h-16 rounded-2xl flex items-center justify-center mx-auto mb-4">
-							<i style="color: white; font-size: 20px;" class="fa-solid fa-chalkboard"></i>
+							class="bg-gradient-to-br from-primary to-secondary w-12 sm:w-16 h-12 sm:h-16 rounded-xl sm:rounded-2xl flex items-center justify-center mx-auto mb-3 sm:mb-4">
+							<i style="color: white; font-size: 16px;" class="fa-solid fa-chalkboard sm:text-xl"></i>
 						</div>
-						<h4 class="text-lg font-bold text-gray-800 mb-2">Zamonaviy Metodlar
-						</h4>
-						<p class="text-gray-600 text-sm">Arab tili va boshqa tillarni
+						<h4 class="text-base sm:text-lg font-bold text-gray-800 mb-2">Zamonaviy Metodlar</h4>
+						<p class="text-gray-600 text-xs sm:text-sm">Arab tili va boshqa tillarni
 							tushunarli va zamonaviy metodlarda
 							o'rgatish</p>
 					</div>
 
-					<div class="text-center p-6 rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
+					<div
+						class="text-center p-4 sm:p-6 rounded-xl sm:rounded-2xl bg-gradient-to-br from-primary/5 to-secondary/5">
 						<div
-							class="bg-gradient-to-br from-primary to-secondary w-16 h-16 rounded-2xl flex items-center justify-center mx-auto mb-4">
-							<i style="color: white; font-size: 20px;" class="fa-solid fa-chart-line"></i>
+							class="bg-gradient-to-br from-primary to-secondary w-12 sm:w-16 h-12 sm:h-16 rounded-xl sm:rounded-2xl flex items-center justify-center mx-auto mb-3 sm:mb-4">
+							<i style="color: white; font-size: 16px;" class="fa-solid fa-chart-line sm:text-xl"></i>
 						</div>
-						<h4 class="text-lg font-bold text-gray-800 mb-2">Faol Avlod</h4>
-						<p class="text-gray-600 text-sm">Axloqli, ilmli, kasb-hunarli,
+						<h4 class="text-base sm:text-lg font-bold text-gray-800 mb-2">Faol Avlod</h4>
+						<p class="text-gray-600 text-xs sm:text-sm">Axloqli, ilmli, kasb-hunarli,
 							jamiyatda faol avlodni
 							tarbiyalash</p>
 					</div>
 				</div>
 
 				<!-- Call to Action -->
-				<div class="text-center bg-gradient-to-br from-primary/10 to-secondary/10 rounded-2xl p-8">
-					<h4 class="text-2xl font-bold text-gray-800 mb-4">
+				<div
+					class="text-center bg-gradient-to-br from-primary/10 to-secondary/10 rounded-xl sm:rounded-2xl p-6 sm:p-8">
+					<h4 class="text-xl sm:text-2xl font-bold text-gray-800 mb-3 sm:mb-4">
 						Qur'on yo'liga biz bilan chiqing
 					</h4>
-					<p class="text-gray-600 text-lg mb-6 max-w-2xl mx-auto">
+					<p class="text-gray-600 text-sm sm:text-lg mb-4 sm:mb-6 max-w-2xl mx-auto">
 						Biz har bir qalbga ezgulik urug'ini qadamoqchimiz. Sizdan esa biz
 						tarafga bir qadam tashlash
 						qolgan xolos.
 					</p>
 					<button
-						class="bg-gradient-to-r from-primary to-secondary text-white px-8 py-3 rounded-2xl font-semibold shadow-lg hover:shadow-xl transition-all duration-300 transform hover:scale-105">
+						class="bg-gradient-to-r from-primary to-secondary text-white px-6 sm:px-8 py-2 sm:py-3 rounded-xl sm:rounded-2xl font-semibold hover:shadow-xl transition-all duration-300 transform hover:scale-105 text-sm sm:text-base">
 						Biz Bilan Bog'laning
 					</button>
 				</div>
 			</div>
 		</div>
 	</section>
-
 	<!-- Stats Section -->
 	<section class="py-16 bg-white">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
