--- a/index.html
+++ b/index.html
@@ -1161,28 +1161,26 @@
 		</div>
 	</section>
 	<!-- Stats Section -->
-	<section class="py-16 bg-white">
+
+	<!-- Stats Section -->
+	<section class="py-8 sm:py-16 bg-white">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-			<div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center">
+			<div class="grid grid-cols-2 md:grid-cols-4 gap-4 sm:gap-8 text-center">
 				<div class="bounce-in" style="animation-delay: 0.1s;">
-					<div class="text-4xl lg:text-5xl font-bold text-gradient mb-3">1000+
-					</div>
-					<div class="text-gray-600 font-medium">Faol O'quvchilar</div>
+					<div class="text-2xl sm:text-4xl lg:text-5xl font-bold text-gradient mb-2 sm:mb-3">1000+</div>
+					<div class="text-gray-600 font-medium text-xs sm:text-base">Faol O'quvchilar</div>
 				</div>
 				<div class="bounce-in" style="animation-delay: 0.2s;">
-					<div class="text-4xl lg:text-5xl font-bold text-gradient mb-3">50+
-					</div>
-					<div class="text-gray-600 font-medium">Mutaxassis Ustozlar</div>
+					<div class="text-2xl sm:text-4xl lg:text-5xl font-bold text-gradient mb-2 sm:mb-3">50+</div>
+					<div class="text-gray-600 font-medium text-xs sm:text-base">Mutaxassis Ustozlar</div>
 				</div>
 				<div class="bounce-in" style="animation-delay: 0.3s;">
-					<div class="text-4xl lg:text-5xl font-bold text-gradient mb-3">15+
-					</div>
-					<div class="text-gray-600 font-medium">Ta'lim Yo'nalishlari</div>
+					<div class="text-2xl sm:text-4xl lg:text-5xl font-bold text-gradient mb-2 sm:mb-3">15+</div>
+					<div class="text-gray-600 font-medium text-xs sm:text-base">Ta'lim Yo'nalishlari</div>
 				</div>
 				<div class="bounce-in" style="animation-delay: 0.4s;">
-					<div class="text-4xl lg:text-5xl font-bold text-gradient mb-3">99%
-					</div>
-					<div class="text-gray-600 font-medium">Muvaffaqiyat Darajasi</div>
+					<div class="text-2xl sm:text-4xl lg:text-5xl font-bold text-gradient mb-2 sm:mb-3">99%</div>
+					<div class="text-gray-600 font-medium text-xs sm:text-base">Muvaffaqiyat Darajasi</div>
 				</div>
 			</div>
 		</div>
@@ -1204,96 +1202,94 @@
 	</script>
 
 	<!-- Why Choose Us -->
-	<section id="biz-haqimizda" class="py-20 bg-white">
+	<section id="biz-haqimizda" class="py-12 sm:py-20 bg-white">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-			<div class="text-center mb-16">
+			<div class="text-center mb-8 sm:mb-16">
 				<div class="relative inline-block">
-					<h2 class="text-4xl lg:text-6xl font-bold text-[#00D084] mb-4">Nima
+					<h2 class="text-2xl sm:text-4xl lg:text-6xl font-bold text-[#00D084] mb-3 sm:mb-4">Nima
 						uchun Muhib Academy?</h2>
-
 				</div>
-				<p class="text-xl text-gray-600 max-w-3xl mx-auto mt-6">
+				<p class="text-sm sm:text-xl text-gray-600 max-w-3xl mx-auto mt-4 sm:mt-6">
 					Zamonaviy ta'lim usullari bilan diniy va dunyoviy ilmlarni
 					uyg'unlashtirgan holda ta'lim beramiz
 				</p>
 			</div>
 
-			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8">
+				<div
+					class="text-center p-6 sm:p-8 rounded-2xl sm:rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
-						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+						class="bg-gradient-to-br from-primary to-secondary w-16 sm:w-20 h-16 sm:h-20 rounded-2xl sm:rounded-3xl flex items-center justify-center mx-auto mb-4 sm:mb-6">
+						<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
 						</svg>
 					</div>
-					<h3 class="text-2xl font-bold mb-4 text-gray-800">Malakali Ustozlar
-					</h3>
-					<p class="text-gray-600 leading-relaxed">
+					<h3 class="text-lg sm:text-2xl font-bold mb-3 sm:mb-4 text-gray-800">Malakali Ustozlar</h3>
+					<p class="text-sm sm:text-base text-gray-600 leading-relaxed">
 						O'z sohalarida yillik tajribaga ega bo'lgan mutaxassis
 						ustozlardan ta'lim oling
 					</p>
 				</div>
 
-
-
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
+				<div
+					class="text-center p-6 sm:p-8 rounded-2xl sm:rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
-						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+						class="bg-gradient-to-br from-primary to-secondary w-16 sm:w-20 h-16 sm:h-20 rounded-2xl sm:rounded-3xl flex items-center justify-center mx-auto mb-4 sm:mb-6">
+						<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
 						</svg>
 					</div>
-					<h3 class="text-2xl font-bold mb-4 text-gray-800">Moslashuvchan
-						Jadval</h3>
-					<p class="text-gray-600 leading-relaxed">
+					<h3 class="text-lg sm:text-2xl font-bold mb-3 sm:mb-4 text-gray-800">Moslashuvchan Jadval</h3>
+					<p class="text-sm sm:text-base text-gray-600 leading-relaxed">
 						O'z vaqtingizga mos ravishda, 24/7 barcha dars materiallariga
 						kirish imkoniyati
 					</p>
 				</div>
 
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
+				<div
+					class="text-center p-6 sm:p-8 rounded-2xl sm:rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
-						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+						class="bg-gradient-to-br from-primary to-secondary w-16 sm:w-20 h-16 sm:h-20 rounded-2xl sm:rounded-3xl flex items-center justify-center mx-auto mb-4 sm:mb-6">
+						<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" />
 						</svg>
 					</div>
-					<h3 class="text-2xl font-bold mb-4 text-gray-800">Sertifikat</h3>
-					<p class="text-gray-600 leading-relaxed">
+					<h3 class="text-lg sm:text-2xl font-bold mb-3 sm:mb-4 text-gray-800">Sertifikat</h3>
+					<p class="text-sm sm:text-base text-gray-600 leading-relaxed">
 						Kursni muvaffaqiyatli yakunlagach, rasmiy sertifikat olish
 						imkoniyati
 					</p>
 				</div>
 
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
+				<div
+					class="text-center p-6 sm:p-8 rounded-2xl sm:rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
-						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+						class="bg-gradient-to-br from-primary to-secondary w-16 sm:w-20 h-16 sm:h-20 rounded-2xl sm:rounded-3xl flex items-center justify-center mx-auto mb-4 sm:mb-6">
+						<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z" />
 						</svg>
 					</div>
-					<h3 class="text-2xl font-bold mb-4 text-gray-800">Individual
-						Yondashuv</h3>
-					<p class="text-gray-600 leading-relaxed">
+					<h3 class="text-lg sm:text-2xl font-bold mb-3 sm:mb-4 text-gray-800">Individual Yondashuv</h3>
+					<p class="text-sm sm:text-base text-gray-600 leading-relaxed">
 						Har bir o'quvchiga alohida e'tibor va individual ta'lim rejasi
 					</p>
 				</div>
 
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
+				<div
+					class="text-center p-6 sm:p-8 rounded-2xl sm:rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
-						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
+						class="bg-gradient-to-br from-primary to-secondary w-16 sm:w-20 h-16 sm:h-20 rounded-2xl sm:rounded-3xl flex items-center justify-center mx-auto mb-4 sm:mb-6">
+						<svg class="w-8 sm:w-10 h-8 sm:h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
 						</svg>
 					</div>
-					<h3 class="text-2xl font-bold mb-4 text-gray-800">Amaliy Bilimlar
-					</h3>
-					<p class="text-gray-600 leading-relaxed">
+					<h3 class="text-lg sm:text-2xl font-bold mb-3 sm:mb-4 text-gray-800">Amaliy Bilimlar</h3>
+					<p class="text-sm sm:text-base text-gray-600 leading-relaxed">
 						Nazariy bilimlarni amaliyotda qo'llash va real loyihalar ustida
 						ishlash
 					</p>
@@ -1303,40 +1299,37 @@
 	</section>
 
 	<!-- Minimalistic Student Testimonials Section -->
-	<section class="py-24 bg-white">
+	<section class="py-12 sm:py-24 bg-white">
 		<div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
 			<!-- Header -->
-			<div class="text-center mb-20">
-				<h2 class="text-5xl lg:text-6xl font-bold text-[#00D084] mb-6">
+			<div class="text-center mb-12 sm:mb-20">
+				<h2 class="text-3xl sm:text-5xl lg:text-6xl font-bold text-[#00D084] mb-4 sm:mb-6">
 					O'quvchilarimiz Fikri
 				</h2>
-
-				<p class="text-xl text-gray-600 max-w-2xl mx-auto">
+				<p class="text-base sm:text-xl text-gray-600 max-w-2xl mx-auto">
 					Muvaffaqiyatli o'quvchilarning fikr-mulohazalari
 				</p>
 			</div>
 
 			<!-- Testimonials Grid -->
-			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-16">
+			<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-8 mb-8 sm:mb-16">
 				<!-- Testimonial 1 -->
 				<div
-					class="bg-white rounded-2xl p-8 border border-gray-100 hover:border-[#059669]/30 hover:shadow-lg transition-all duration-300">
+					class="bg-white rounded-xl sm:rounded-2xl p-6 sm:p-8 border border-gray-100 hover:border-[#059669]/30 transition-all duration-300">
 					<!-- User Info -->
-					<div class="flex items-center mb-6">
+					<div class="flex items-center mb-4 sm:mb-6">
 						<div
-							class="w-14 h-14 bg-[#00D084] rounded-full flex items-center justify-center text-white font-bold text-lg">
+							class="w-12 sm:w-14 h-12 sm:h-14 bg-[#00D084] rounded-full flex items-center justify-center text-white font-bold text-base sm:text-lg">
 							AF
 						</div>
-						<div class="ml-4">
-							<h4 class="font-bold text-gray-800 text-lg">Aziza
-								Fayzullayeva</h4>
-							<p class="text-[#00D084] font-medium text-sm">Arab tili
-								o'quvchisi</p>
+						<div class="ml-3 sm:ml-4">
+							<h4 class="font-bold text-gray-800 text-base sm:text-lg">Aziza Fayzullayeva</h4>
+							<p class="text-[#00D084] font-medium text-xs sm:text-sm">Arab tili o'quvchisi</p>
 						</div>
 					</div>
 
 					<!-- Testimonial Text -->
-					<p class="text-gray-600 leading-relaxed mb-6">
+					<p class="text-gray-600 leading-relaxed mb-4 sm:mb-6 text-sm sm:text-base">
 						"Arab tilini o'rganish orzu edi. Muhib Academy'da professional
 						ustozlardan ta'lim olib,
 						Qur'onni tushunib o'qiy olmayapman. Juda minnatdorman!"
@@ -1344,32 +1337,30 @@
 
 					<!-- Rating -->
 					<div class="flex items-center justify-between">
-						<div class="flex text-[#00D084] text-lg">
+						<div class="flex text-[#00D084] text-base sm:text-lg">
 							★★★★★
 						</div>
-						<span class="text-gray-400 text-sm">6 oy oldin</span>
+						<span class="text-gray-400 text-xs sm:text-sm">6 oy oldin</span>
 					</div>
 				</div>
 
 				<!-- Testimonial 2 -->
 				<div
-					class="bg-white rounded-2xl p-8 border border-gray-100 hover:border-[#059669]/30 hover:shadow-lg transition-all duration-300">
+					class="bg-white rounded-xl sm:rounded-2xl p-6 sm:p-8 border border-gray-100 hover:border-[#059669]/30 transition-all duration-300">
 					<!-- User Info -->
-					<div class="flex items-center mb-6">
+					<div class="flex items-center mb-4 sm:mb-6">
 						<div
-							class="w-14 h-14 bg-[#00D084]  rounded-full flex items-center justify-center text-white font-bold text-lg">
+							class="w-12 sm:w-14 h-12 sm:h-14 bg-[#00D084] rounded-full flex items-center justify-center text-white font-bold text-base sm:text-lg">
 							MR
 						</div>
-						<div class="ml-4">
-							<h4 class="font-bold text-gray-800 text-lg">Muhammad
-								Rahmonov</h4>
-							<p class="text-[#00D084]font-medium text-sm">IT o'quvchisi
-							</p>
+						<div class="ml-3 sm:ml-4">
+							<h4 class="font-bold text-gray-800 text-base sm:text-lg">Muhammad Rahmonov</h4>
+							<p class="text-[#00D084] font-medium text-xs sm:text-sm">IT o'quvchisi</p>
 						</div>
 					</div>
 
 					<!-- Testimonial Text -->
-					<p class="text-gray-600 leading-relaxed mb-6">
+					<p class="text-gray-600 leading-relaxed mb-4 sm:mb-6 text-sm sm:text-base">
 						"Robotika kursi hayotimni o'zgartirdi. Endi dasturlashni bilamna
 						va o'z loyihalarimni yarataman.
 						Ustozlar juda sabotli va tajribali."
@@ -1377,32 +1368,30 @@
 
 					<!-- Rating -->
 					<div class="flex items-center justify-between">
-						<div class="flex text-[#00D084]text-lg">
+						<div class="flex text-[#00D084] text-base sm:text-lg">
 							★★★★★
 						</div>
-						<span class="text-gray-400 text-sm">3 oy oldin</span>
+						<span class="text-gray-400 text-xs sm:text-sm">3 oy oldin</span>
 					</div>
 				</div>
 
 				<!-- Testimonial 3 -->
 				<div
-					class="bg-white rounded-2xl p-8 border border-gray-100 hover:border-[#059669]/30 hover:shadow-lg transition-all duration-300">
+					class="bg-white rounded-xl sm:rounded-2xl p-6 sm:p-8 border border-gray-100 hover:border-[#059669]/30 transition-all duration-300">
 					<!-- User Info -->
-					<div class="flex items-center mb-6">
+					<div class="flex items-center mb-4 sm:mb-6">
 						<div
-							class="w-14 h-14 bg-[#00D084]  rounded-full flex items-center justify-center text-white font-bold text-lg">
+							class="w-12 sm:w-14 h-12 sm:h-14 bg-[#00D084] rounded-full flex items-center justify-center text-white font-bold text-base sm:text-lg">
 							ZS
 						</div>
-						<div class="ml-4">
-							<h4 class="font-bold text-gray-800 text-lg">Zarina Saidova
-							</h4>
-							<p class="text-[#00D084] font-medium text-sm">Ingliz tili
-								o'quvchisi</p>
+						<div class="ml-3 sm:ml-4">
+							<h4 class="font-bold text-gray-800 text-base sm:text-lg">Zarina Saidova</h4>
+							<p class="text-[#00D084] font-medium text-xs sm:text-sm">Ingliz tili o'quvchisi</p>
 						</div>
 					</div>
 
 					<!-- Testimonial Text -->
-					<p class="text-gray-600 leading-relaxed mb-6">
+					<p class="text-gray-600 leading-relaxed mb-4 sm:mb-6 text-sm sm:text-base">
 						"Ingliz tilini mukammal o'rgandim. Endi chet elda ishlash
 						imkoniyatim paydo bo'ldi.
 						Muhib Academy'ga katta rahmat!"
@@ -1410,19 +1399,16 @@
 
 					<!-- Rating -->
 					<div class="flex items-center justify-between">
-						<div class="flex text-[#00D084] text-lg">
+						<div class="flex text-[#00D084] text-base sm:text-lg">
 							★★★★★
 						</div>
-						<span class="text-gray-400 text-sm">2 oy oldin</span>
+						<span class="text-gray-400 text-xs sm:text-sm">2 oy oldin</span>
 					</div>
 				</div>
 			</div>
-
-
-
-
 		</div>
 	</section>
+
 
 	<!-- Buy Course Form Section -->
 	<section id="kurs-sotib-olish" class="py-20 bg-white">
