--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<!-- Font Awesome 6.5.0 Free CDN -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
 		integrity="sha512-...yada-yada..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="shortcut icon" href="./Untitled-1.png" type="image/x-icon">
 
 	<script>
 		tailwind.config = {
