--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 					class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-24 relative z-10 w-full">
 					<!-- Left Content -->
 					<div class="md:w-1/2 space-y-8">
-						<h1 class="text-4xl md:text-5xl font-medium text-gray-900 leading-tight">
+						<h1 class="text-4xl md:text-5xl font-medium text-gray-900 sm:mt-10">
 							<span class="block">ONLAYN</span>
 							<span class="block text-[#00D084]">QUR'ON DARSLARI</span>
 						</h1>
