--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 		<div class="absolute inset-0 bg-[url('./bgimg.png')] bg-cover opacity-10"></div>
 
 		<!-- Slide 1 - Online Courses -->
-		<section class="h-screen w-full flex items-center py-12 md:py-24 relative" id="slide1">
+		<section class="section-slide h-screen w-full flex items-center py-12 md:py-24 relative snap-start" id="slide1">
 			<div
 				class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-24 relative z-10 w-full">
 				<!-- Left Content -->
@@ -331,7 +331,7 @@
 		</section>
 
 		<!-- Slide 2 - Offline Academy -->
-		<section class="h-screen w-full flex items-center py-12 md:py-24 relative" id="slide2">
+		<section class="section-slide h-screen w-full flex items-center py-12 md:py-24 relative snap-start" id="slide2">
 			<div
 				class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row items-center gap-12 md:gap-24 relative z-10 w-full">
 				<!-- Left Content -->
@@ -400,15 +400,19 @@
 	</div>
 
 	<style>
-		/* Initial state for all sections except first */
-		#slide2 {
+		/* Smooth scrolling behavior */
+		html {
+			scroll-behavior: smooth;
+		}
+
+		/* Animation for slide entrance */
+		.section-slide {
 			opacity: 0;
 			transform: translateY(20px);
 			transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 		}
 
-		/* Active state when section is in view */
-		#slide2.active {
+		.section-slide.active {
 			opacity: 1;
 			transform: translateY(0);
 		}
@@ -422,63 +426,52 @@
 			transform: scale(1.03);
 		}
 
-		/* Scroll indicator animation */
-		@keyframes bounce {
-
-			0%,
-			20%,
-			50%,
-			80%,
-			100% {
-				transform: translateY(0) translateX(-50%);
-			}
-
-			40% {
-				transform: translateY(-20px) translateX(-50%);
-			}
-
-			60% {
-				transform: translateY(-10px) translateX(-50%);
-			}
-		}
-
-		.animate-bounce {
-			animation: bounce 2s infinite;
+		/* Scroll snap */
+		.snap-start {
+			scroll-snap-align: start;
 		}
 	</style>
 
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
-			const slide2 = document.getElementById('slide2');
-			let slide2Shown = false;
+			const slides = document.querySelectorAll('.section-slide');
+			let currentSlide = 0;
 
-			// Function to check if element is in viewport
-			function isInViewport(element) {
-				const rect = element.getBoundingClientRect();
-				return (
-					rect.top <= (window.innerHeight * 0.75) &&
-					rect.bottom >= (window.innerHeight * 0.25)
-				);
+			// Initialize first slide as active
+			slides[0].classList.add('active');
+
+			// Function to check which slide is in view
+			function checkSlideVisibility() {
+				const windowHeight = window.innerHeight;
+				const windowTop = window.scrollY;
+				const windowBottom = windowTop + windowHeight;
+
+				slides.forEach((slide, index) => {
+					const slideTop = slide.offsetTop;
+					const slideBottom = slideTop + slide.offsetHeight;
+					const slideMiddle = slideTop + (slide.offsetHeight / 2);
+
+					// If slide middle is in viewport
+					if (slideMiddle >= windowTop && slideMiddle <= windowBottom) {
+						if (!slide.classList.contains('active')) {
+							slide.classList.add('active');
+							currentSlide = index;
+						}
+					} else {
+						slide.classList.remove('active');
+					}
+				});
 			}
 
-			// Function to handle scroll events
-			function handleScroll() {
-				if (!slide2Shown && isInViewport(slide2)) {
-					slide2.classList.add('active');
-					slide2Shown = true;
-					// Remove scroll listener after both slides are shown
-					window.removeEventListener('scroll', handleScroll);
-				}
-			}
+			// Throttle scroll events for performance
+			let isScrolling;
+			window.addEventListener('scroll', function () {
+				window.clearTimeout(isScrolling);
+				isScrolling = setTimeout(checkSlideVisibility, 100);
+			}, false);
 
-			// Initial check in case slide2 is already visible
-			if (isInViewport(slide2)) {
-				slide2.classList.add('active');
-				slide2Shown = true;
-			} else {
-				// Add scroll listener if slide2 isn't visible yet
-				window.addEventListener('scroll', handleScroll);
-			}
+			// Check on initial load
+			checkSlideVisibility();
 
 			// Interactive images - Apple-like hover effect
 			document.querySelectorAll('.interactive-image').forEach(image => {
@@ -504,7 +497,6 @@
 			});
 		});
 	</script>
-
 
 	<section id="biz-haqimizda" class="py-12 sm:py-20 relative overflow-hidden">
 		<!-- Background Elements -->
