--- a/index.html
+++ b/index.html
@@ -252,11 +252,9 @@
 	<!-- Complete Carousel Section -->
 	<div class="relative overflow-hidden min-h-screen ">
 		<!-- Background Texture -->
-		<div class="absolute inset-0 bg-[url('./fsdgdgdfg.png')] bg-cover opacity-1"></div>
+		<div class="absolute inset-0 bg-[url('./Artboard 2.png')] bg-cover opacity-1"
+			style="background-image: url('./Artboard 2.png');"></div>
 
-		<!-- Section 1 - Main Introduction -->
-		<!-- Section 1 - Main Introduction -->
-		<!-- Section 1 - Main Introduction -->
 		<section
 			class="min-h-screen flex items-center text-white py-8 md:py-12 relative bg-cover bg-center bg-no-repeat"
 			style="background-image: url('your-green-bg-image.jpg');">
@@ -282,8 +280,8 @@
 							<!-- Main Heading -->
 							<h1 class="text-3xl md:text-5xl lg:text-6xl font-black leading-tight"
 								style="text-shadow: 2px 2px 4px rgba(0,0,0,0.7), 0 0 10px rgba(0,0,0,0.5);">
-								<span class="text-white">ARAB TILI</span><br>
-								<span class="text-yellow-300">VA QUR'ON</span><br>
+
+								<span class="text-yellow-300">ONLINE QUR'ON</span><br>
 								<span
 									class="text-white/95 text-xl md:text-3xl lg:text-4xl font-semibold">DARSLARI</span>
 							</h1>
@@ -305,34 +303,14 @@
 						</div>
 
 						<!-- Course Information Card -->
-						<div
-							class="rounded-2xl p-4 md:p-8 border-2 border-yellow-300/60 shadow-2xl bg-green-900/50 backdrop-blur-xl pulse-glow">
-							<div class="flex items-center gap-3 mb-4">
-								<div class="w-3 h-3 bg-yellow-300 rounded-full animate-pulse"></div>
-								<span class="text-yellow-300 font-bold text-sm md:text-base tracking-wide"
-									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">📚 ONLAYN KURS!</span>
-							</div>
-							<p class="text-sm md:text-base leading-relaxed mb-4 text-white font-semibold"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								<strong>2 oy ichida onlayn darslar orqali Qur'onni to'g'ri o'qishni o'rganasiz.</strong>
-							</p>
-							<p class="text-white/90 leading-relaxed text-sm md:text-base mb-3"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								Darslarimiz sizga ma'qul kelishiga ishonaman, inshAllah.
-							</p>
-							<p class="text-white/90 leading-relaxed text-sm md:text-base"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								<strong class="text-yellow-300">Agar ma'qul kelmasa, 7 kun ichida to'lovingiz
-									qaytariladi.</strong>
-							</p>
-						</div>
+
 
 						<!-- Call to Action Button -->
 						<div class="flex justify-center lg:justify-start">
 							<button
 								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
 								<span class="flex items-center gap-2">
-									📹 Birinchi Bepul Darsni Ko'rish
+									Online darslar haqida batafsil
 									<svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none"
 										stroke="currentColor" viewBox="0 0 24 24">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -353,25 +331,19 @@
 						</div>
 
 						<!-- Teacher Card -->
-						<div
-							class="relative z-10 rounded-2xl sm:rounded-3xl p-3 sm:p-8 bg-green-900/50 backdrop-blur-xl border-2 border-white/40 shadow-2xl hover:shadow-3xl hover:scale-105 transition-all duration-500">
+						<div class="relative z-10 rounded-2xl sm:rounded-3xl p-3 sm:p-8  transition-all duration-500">
 							<div class="text-center space-y-3 sm:space-y-6">
 								<!-- Enhanced Teacher Image -->
 								<div
-									class="relative mx-auto w-full sm:w-[380px] h-[40vh] sm:h-[350px] rounded-xl sm:rounded-2xl overflow-hidden shadow-2xl border-4 border-white/30">
+									class="relative mx-auto w-full sm:w-[380px] h-[40vh] sm:h-[350px] overflow-hidden ">
 									<img src="./hero.png" alt="Muhibulloh Ustoz"
 										class="w-full h-full object-cover object-top hover:scale-110 transition-transform duration-500" />
 
 									<!-- Enhanced Gradient Overlay -->
-									<div
-										class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent">
+									<div class="absolute inset-0">
 									</div>
 
-									<!-- Enhanced Teacher Info -->
-									<div class="absolute bottom-0 left-0 right-0 p-2 sm:p-6 text-white z-10">
-										<h2 class="text-sm sm:text-xl font-black mb-1"
-											style="text-shadow: 2px 2px 4px rgba(0,0,0,0.9);">Muhibulloh Noʻmonov</h2>
-									</div>
+
 								</div>
 							</div>
 						</div>
@@ -381,24 +353,16 @@
 		</section>
 
 		<!-- Section 2 - Why Muhib Academy -->
-		<section
-			class="min-h-screen flex items-center text-white py-8 md:py-12 relative bg-cover bg-center bg-no-repeat"
+		<section class="h-[50vh] md:h-[100vh] flex  relative bg-cover bg-center bg-no-repeat"
 			style="background-image: url('your-green-bg-image.jpg');">
 			<!-- Green-toned overlay for better text readability -->
 			<div class="absolute inset-0 bg-green-900/20"></div>
 			<!-- Animated Background Elements -->
 			<div class="absolute inset-0 overflow-hidden pointer-events-none">
-				<div
-					class="floating-elements absolute top-10 md:top-20 left-5 md:left-10 w-12 md:w-32 h-12 md:h-32 bg-white/10 rounded-full">
-				</div>
-				<div class="floating-elements absolute bottom-10 md:bottom-20 right-10 md:right-20 w-8 md:w-24 h-8 md:w-24 bg-white/5 rounded-full"
-					style="animation-delay: 0.5s;"></div>
-				<div class="floating-elements absolute top-1/2 left-1/4 w-6 md:w-16 h-6 md:h-16 bg-white/8 rounded-full"
-					style="animation-delay: 1s;"></div>
-				<div class="absolute top-1/3 right-1/3 w-4 md:w-12 h-4 md:h-12 bg-yellow-300/20 rotate-45"></div>
+
 			</div>
 
-			<div class="max-w-7xl mx-auto px-4 md:px-8 relative z-10 w-full">
+			<div class="max-w-7xl  px-4 md:px-8 relative z-10 w-full">
 				<div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-16 items-center">
 					<!-- Left Content -->
 					<div class="space-y-6 md:space-y-8 order-2 lg:order-1">
@@ -406,10 +370,10 @@
 							<!-- Main Heading -->
 							<h1 class="text-3xl md:text-5xl lg:text-6xl font-black leading-tight"
 								style="text-shadow: 2px 2px 4px rgba(0,0,0,0.7), 0 0 10px rgba(0,0,0,0.5);">
-								<span class="text-white">NEGA AYNAN</span><br>
-								<span class="text-yellow-300">MUHIB</span><br>
+
+								<span class="text-yellow-300">OFFLINE QUR'ON</span><br>
 								<span
-									class="text-white/95 text-xl md:text-3xl lg:text-4xl font-semibold">ACADEMY?</span>
+									class="text-white/95 text-xl md:text-3xl lg:text-4xl font-semibold">DARSLARI</span>
 							</h1>
 
 							<div
@@ -427,34 +391,14 @@
 						</div>
 
 						<!-- Course Information Card -->
-						<div
-							class="rounded-2xl p-4 md:p-8 border-2 border-yellow-300/60 shadow-2xl bg-green-900/50 backdrop-blur-xl pulse-glow">
-							<div class="flex items-center gap-3 mb-4">
-								<div class="w-3 h-3 bg-yellow-300 rounded-full animate-pulse"></div>
-								<span class="text-yellow-300 font-bold text-sm md:text-base tracking-wide"
-									style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">✅ BIZ KAFOLATLAYMIZ!</span>
-							</div>
-							<p class="text-sm md:text-base leading-relaxed mb-4 text-white font-semibold"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								<strong>Har bir o'quvchiga individual yondashuv va professional ta'lim.</strong>
-							</p>
-							<p class="text-white/90 leading-relaxed text-sm md:text-base mb-3"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								6+ yillik tajribaga ega ustozlar sizga yordam beradi.
-							</p>
-							<p class="text-white/90 leading-relaxed text-sm md:text-base"
-								style="text-shadow: 1px 1px 3px rgba(0,0,0,0.8);">
-								<strong class="text-yellow-300">Interaktiv, samarali va zamonaviy o'qitish
-									metodlari.</strong>
-							</p>
-						</div>
+
 
 						<!-- Call to Action Button -->
 						<div class="flex justify-center lg:justify-start">
 							<button
 								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
 								<span class="flex items-center gap-2">
-									🚀 Hoziroq Kursga Yozilish
+									Offline darlar haqida ma'lumot
 									<svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none"
 										stroke="currentColor" viewBox="0 0 24 24">
 										<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -470,33 +414,12 @@
 						<!-- Special Badge -->
 						<div
 							class="absolute -top-4 -left-4 bg-yellow-400 text-gray-900 rounded-full px-4 py-2 md:px-6 md:py-4 shadow-2xl z-20 animate-bounce">
-							<span class="font-black text-sm md:text-xl">6+</span>
-							<p class="text-xs font-bold">yil tajriba</p>
+							<span class="font-black text-sm md:text-xl">OFFLINE</span>
+							<p class="text-xs font-bold">darslar boshlandi</p>
 						</div>
 
 						<!-- Teacher Card -->
-						<div
-							class="relative z-10 rounded-2xl sm:rounded-3xl p-3 sm:p-8 bg-green-900/50 backdrop-blur-xl border-2 border-white/40 shadow-2xl hover:shadow-3xl hover:scale-105 transition-all duration-500">
-							<div class="text-center space-y-3 sm:space-y-6">
-								<!-- Enhanced Teacher Image -->
-								<div
-									class="relative mx-auto w-full sm:w-[380px] h-[40vh] sm:h-[350px] rounded-xl sm:rounded-2xl overflow-hidden shadow-2xl border-4 border-white/30">
-									<img src="./hero2.png" alt="Muhibulloh Ustoz"
-										class="w-full h-full object-cover object-top hover:scale-110 transition-transform duration-500" />
 
-									<!-- Enhanced Gradient Overlay -->
-									<div
-										class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/20 to-transparent">
-									</div>
-
-									<!-- Enhanced Teacher Info -->
-									<div class="absolute bottom-0 left-0 right-0 p-2 sm:p-6 text-white z-10">
-										<h2 class="text-sm sm:text-xl font-black mb-1"
-											style="text-shadow: 2px 2px 4px rgba(0,0,0,0.9);">Muhibulloh Noʻmonov</h2>
-									</div>
-								</div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
