--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 	<!-- Complete Carousel Section -->
 	<div class="relative overflow-hidden min-h-screen ">
 		<!-- Background Texture -->
-		<div class="absolute inset-0 bg-[url('./Artboard 2.png')] bg-cover opacity-1"
+		<div class="absolute inset-0 md:bg-[url('./Artboard 1.png')] bg-cover opacity-1"
 			style="background-image: url('./Artboard 2.png');"></div>
 
 		<section
@@ -353,7 +353,7 @@
 		</section>
 
 		<!-- Section 2 - Why Muhib Academy -->
-		<section class="h-[50vh] md:h-[100vh] flex  relative bg-cover bg-center bg-no-repeat"
+		<section class="h-[60vh] md:h-[100vh] flex  relative bg-cover bg-center bg-no-repeat"
 			style="background-image: url('your-green-bg-image.jpg');">
 			<!-- Green-toned overlay for better text readability -->
 			<div class="absolute inset-0 bg-green-900/20"></div>
