--- a/index.html
+++ b/index.html
@@ -302,12 +302,9 @@
 							</div>
 						</div>
 
-						<!-- Course Information Card -->
-
-
 						<!-- Call to Action Button -->
 						<div class="flex justify-center lg:justify-start">
-							<button
+							<button onclick="openModal('onlineModal')"
 								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
 								<span class="flex items-center gap-2">
 									Online darslar haqida batafsil
@@ -342,8 +339,6 @@
 									<!-- Enhanced Gradient Overlay -->
 									<div class="absolute inset-0">
 									</div>
-
-
 								</div>
 							</div>
 						</div>
@@ -352,7 +347,7 @@
 			</div>
 		</section>
 
-		<!-- Section 2 - Why Muhib Academy -->
+		<!-- Section 2 - Offline Lessons -->
 		<section class="h-[60vh] md:h-[100vh] flex  relative bg-cover bg-center bg-no-repeat"
 			style="background-image: url('your-green-bg-image.jpg');">
 			<!-- Green-toned overlay for better text readability -->
@@ -390,12 +385,9 @@
 							</div>
 						</div>
 
-						<!-- Course Information Card -->
-
-
 						<!-- Call to Action Button -->
 						<div class="flex justify-center lg:justify-start">
-							<button
+							<button onclick="openModal('offlineModal')"
 								class="group bg-yellow-400 text-gray-900 px-6 md:px-8 py-4 rounded-xl font-bold text-base md:text-lg shadow-2xl hover:shadow-3xl transform hover:-translate-y-2 hover:scale-105 transition-all duration-300 border-2 border-yellow-300">
 								<span class="flex items-center gap-2">
 									Offline darlar haqida ma'lumot
@@ -424,6 +416,213 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Online Modal -->
+		<div id="onlineModal" class="modal">
+			<div class="modal-content bg-white rounded-3xl p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
+				<div class="flex justify-between items-center mb-6">
+					<h2 class="text-3xl font-bold text-green-800">Online Qur'on Darslari</h2>
+					<button onclick="closeModal('onlineModal')"
+						class="text-gray-500 hover:text-gray-700 text-3xl">&times;</button>
+				</div>
+
+				<div class="space-y-6">
+					<div class="bg-green-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-green-700 mb-3">📚 Dars Tarkibi</h3>
+						<ul class="space-y-2 text-gray-700">
+							<li>✅ Qur'on o'qish (Tajvid bilan)</li>
+							<li>✅ Arab tili asoslari</li>
+							<li>✅ Tafsir va ma'nolar</li>
+							<li>✅ Islomiy adab va axloq</li>
+						</ul>
+					</div>
+
+					<div class="bg-yellow-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-yellow-700 mb-3">⏰ Dars Jadvali</h3>
+						<div class="grid md:grid-cols-2 gap-4 text-gray-700">
+							<div>
+								<p><strong>Dushanba - Juma:</strong> 18:00 - 19:30</p>
+								<p><strong>Shanba:</strong> 16:00 - 17:30</p>
+							</div>
+							<div>
+								<p><strong>Davomiyligi:</strong> 1.5 soat</p>
+								<p><strong>Haftada:</strong> 6 kun</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-blue-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-blue-700 mb-3">💰 Narxlar</h3>
+						<div class="grid md:grid-cols-2 gap-4">
+							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
+								<h4 class="font-semibold text-blue-800">Boshlang'ich</h4>
+								<p class="text-2xl font-bold text-blue-600">150,000 so'm/oy</p>
+								<p class="text-sm text-gray-600">Asosiy Qur'on o'qish</p>
+							</div>
+							<div class="bg-white p-4 rounded-lg border-2 border-green-200">
+								<h4 class="font-semibold text-green-800">Ilg'or</h4>
+								<p class="text-2xl font-bold text-green-600">200,000 so'm/oy</p>
+								<p class="text-sm text-gray-600">Tafsir va Arab tili bilan</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-purple-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-purple-700 mb-3">🎯 Afzalliklar</h3>
+						<ul class="space-y-2 text-gray-700">
+							<li>🌍 Dunyoning istalgan joyidan qatnashing</li>
+							<li>📱 Zoom orqali interaktiv darslar</li>
+							<li>📋 Shaxsiy dars jadvali</li>
+							<li>🏆 Sertifikat berish</li>
+							<li>📞 24/7 qo'llab-quvvatlash</li>
+						</ul>
+					</div>
+
+					<div class="text-center">
+						<button
+							class="bg-green-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-green-700 transition-colors">
+							📞 Hoziroq Ro'yxatdan O'ting
+						</button>
+						<p class="text-sm text-gray-600 mt-2">Telefon: +998 90 123 45 67</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Offline Modal -->
+		<div id="offlineModal" class="modal">
+			<div class="modal-content bg-white rounded-3xl p-8 max-w-4xl mx-4 max-h-[90vh] overflow-y-auto">
+				<div class="flex justify-between items-center mb-6">
+					<h2 class="text-3xl font-bold text-green-800">Offline Qur'on Darslari</h2>
+					<button onclick="closeModal('offlineModal')"
+						class="text-gray-500 hover:text-gray-700 text-3xl">&times;</button>
+				</div>
+
+				<div class="space-y-6">
+					<div class="bg-green-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-green-700 mb-3">🏢 Dars Joylari</h3>
+						<div class="space-y-3 text-gray-700">
+							<div class="flex items-center space-x-3">
+								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+								<span><strong>Markaz filiali:</strong> Toshkent sh., Chilonzor tumani</span>
+							</div>
+							<div class="flex items-center space-x-3">
+								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+								<span><strong>Yunusobod filiali:</strong> Toshkent sh., Yunusobod tumani</span>
+							</div>
+							<div class="flex items-center space-x-3">
+								<span class="w-2 h-2 bg-green-500 rounded-full"></span>
+								<span><strong>Samarqand filiali:</strong> Samarqand sh., Registon ko'chasi</span>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-orange-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-orange-700 mb-3">👥 Guruh Turlari</h3>
+						<div class="grid md:grid-cols-3 gap-4">
+							<div class="bg-white p-4 rounded-lg border-2 border-orange-200">
+								<h4 class="font-semibold text-orange-800">Bolalar</h4>
+								<p class="text-sm text-gray-600">6-12 yosh</p>
+								<p class="text-sm text-gray-600">5-8 kishi</p>
+							</div>
+							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
+								<h4 class="font-semibold text-blue-800">O'smirlar</h4>
+								<p class="text-sm text-gray-600">13-18 yosh</p>
+								<p class="text-sm text-gray-600">8-12 kishi</p>
+							</div>
+							<div class="bg-white p-4 rounded-lg border-2 border-purple-200">
+								<h4 class="font-semibold text-purple-800">Kattalar</h4>
+								<p class="text-sm text-gray-600">18+ yosh</p>
+								<p class="text-sm text-gray-600">10-15 kishi</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-yellow-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-yellow-700 mb-3">⏰ Dars Vaqtlari</h3>
+						<div class="grid md:grid-cols-2 gap-4 text-gray-700">
+							<div>
+								<p><strong>Ertalabki:</strong> 08:00 - 09:30</p>
+								<p><strong>Kechki:</strong> 18:00 - 19:30</p>
+							</div>
+							<div>
+								<p><strong>Dam olish kunlari:</strong> 10:00 - 11:30</p>
+								<p><strong>Maxsus darslar:</strong> Kelishilgan vaqtda</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-green-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-green-700 mb-3">💰 Offline Narxlar</h3>
+						<div class="grid md:grid-cols-2 gap-4">
+							<div class="bg-white p-4 rounded-lg border-2 border-green-200">
+								<h4 class="font-semibold text-green-800">Guruh darslari</h4>
+								<p class="text-2xl font-bold text-green-600">120,000 so'm/oy</p>
+								<p class="text-sm text-gray-600">8-15 kishilik guruh</p>
+							</div>
+							<div class="bg-white p-4 rounded-lg border-2 border-blue-200">
+								<h4 class="font-semibold text-blue-800">Yakka darslar</h4>
+								<p class="text-2xl font-bold text-blue-600">300,000 so'm/oy</p>
+								<p class="text-sm text-gray-600">Individual yondashuv</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="bg-indigo-50 p-6 rounded-xl">
+						<h3 class="text-xl font-semibold text-indigo-700 mb-3">🎯 Offline Afzalliklar</h3>
+						<ul class="space-y-2 text-gray-700">
+							<li>👨‍🏫 To'g'ridan-to'g'ri ustoz bilan muloqot</li>
+							<li>📚 Bepul o'quv materiallari</li>
+							<li>🤝 Boshqa o'quvchilar bilan hamkorlik</li>
+							<li>🏆 Muntazam baholash va taqdirlar</li>
+							<li>☕ Choy va gazak bilan dam olish</li>
+						</ul>
+					</div>
+
+					<div class="text-center">
+						<button
+							class="bg-orange-600 text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-orange-700 transition-colors">
+							🏢 Filialga Tashrif Buyuring
+						</button>
+						<p class="text-sm text-gray-600 mt-2">Manzil: Toshkent sh., Chilonzor tumani, A.Navoiy ko'chasi
+							24</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<script>
+			function openModal(modalId) {
+				const modal = document.getElementById(modalId);
+				modal.classList.add('show');
+				document.body.style.overflow = 'hidden';
+			}
+
+			function closeModal(modalId) {
+				const modal = document.getElementById(modalId);
+				modal.classList.remove('show');
+				document.body.style.overflow = 'auto';
+			}
+
+			// Close modal when clicking outside
+			window.onclick = function (event) {
+				if (event.target.classList.contains('modal')) {
+					event.target.classList.remove('show');
+					document.body.style.overflow = 'auto';
+				}
+			}
+
+			// Close modal with Escape key
+			document.addEventListener('keydown', function (event) {
+				if (event.key === 'Escape') {
+					const openModal = document.querySelector('.modal.show');
+					if (openModal) {
+						openModal.classList.remove('show');
+						document.body.style.overflow = 'auto';
+					}
+				}
+			});
+		</script>
 
 		<style>
 			@keyframes float {
